fabrik/internal/engine/testdata/provider_cleanup_case_err.txt
A case= provider cannot return a cleanup.
-- go.mod --
module app

go 1.26
-- main.go --
package main

import "os"

func main() { os.Exit(run()) }
-- store/store.go --
package store

type Config struct {
	Kind string `yaml:"kind" default:"memory"`
}

type Store interface {
	Get(k string) string
}

type Mem struct{}

func (Mem) Get(string) string { return "" }

//fabrik:provider case=memory
func NewMem() (Mem, func(), error) { return Mem{}, nil, nil }
-- want/diags --
error: store/store.go:15:1: case provider NewMem cannot return a cleanup
  help: drop the cleanup result or the case= attribute
